<resources>
    <string name="app_name">EncryptionMethod</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_caesar">Шифр Цезаря</string>
    <string name="menu_frequency">Частотный анализ(Цезарь)</string>
    <string name="menu_easy_replacement">Шифр простой замены</string>
    <string name="menu_frequency_analysis">Частотный анализ</string>
    <string name="menu_vigenere">Шифр Виженера</string>
    <string name="menu_permutation">Шифр простой замены</string>

    <string name="home_second">Home Second</string>
    <string name="russian_language">Русский</string>
    <string name="english_language">Английский</string>
    <string name="input_key">Введите ключ…</string>
    <string name="input_alphabet">Введите алфавит…</string>
    <string name="input_text">Введите текст…</string>
</resources>
