<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_caesar"
            android:title="@string/menu_caesar" />
        <item
            android:id="@+id/nav_frequency"
            android:title="@string/menu_frequency" />
        <item
            android:id="@+id/nav_easy_replacement"
            android:title="@string/menu_easy_replacement" />
        <item
            android:id="@+id/nav_frequency_analysis"
            android:title="@string/menu_frequency_analysis" />
        <item
            android:id="@+id/nav_vigenere"
            android:title="@string/menu_vigenere" />
        <item
            android:id="@+id/nav_permutation"
            android:title="@string/menu_permutation" />
    </group>
</menu>
